--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 09:05:03 2018</p>
+         Last Run: Thu Dec  6 10:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -46,10 +46,10 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>11</td>
                      </tr>
                      <tr>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "55",
+                 "56",
                  "56"
                ]
              },
@@ -184,7 +184,7 @@
                "data":[
                  "11",
                  "11",
-                 "15"
+                 "16"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 09:05:03 2018</p>
+         Last Run: Thu Dec  6 10:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>26</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>34</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "63",
-                 "58",
-                 "53"
+                 "59",
+                 "54"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "26",
-                 "34"
+                 "23",
+                 "28",
+                 "36"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 09:05:03 2018</p>
+         Last Run: Thu Dec  6 10:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,17 +468,17 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>7</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>45</td>
                      </tr>
@@ -491,8 +491,8 @@
                         <td>82</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>41</td>
+                        <td>WSW</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-8",
-                 "-10",
+                 "-9",
                  "-10"
                ]
              },
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "78",
+                 "79",
                  "82"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
+                 "55",
                  "45",
-                 "41"
+                 "42"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 09:05:03 2018</p>
+         Last Run: Thu Dec  6 10:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,11 +683,11 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>34</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-8</td>
                         <td>2</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>23</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -818,7 +818,7 @@
                "data":[
                  "65",
                  "65",
-                 "65"
+                 "66"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "28",
-                 "23"
+                 "36",
+                 "30",
+                 "25"
                ]
              }
            ]
