--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 10:05:06 2018</p>
+         Last Run: Thu Dec  6 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,19 +50,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>11</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>16</td>
+                        <td>SW</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "57",
                  "56",
                  "56"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "11",
-                 "16"
+                 "12",
+                 "16",
+                 "37"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 10:05:06 2018</p>
+         Last Run: Thu Dec  6 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,7 +245,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>1</td>
@@ -253,19 +253,19 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>1</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>28</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-3",
+                 "-2",
                  "-1"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-1",
-                 "0",
+                 "1",
                  "2"
                ]
              }
@@ -388,7 +388,7 @@
                "data":[
                  "63",
                  "59",
-                 "54"
+                 "53"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "28",
-                 "36"
+                 "39",
+                 "38",
+                 "39"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 10:05:06 2018</p>
+         Last Run: Thu Dec  6 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>7</td>
+                        <td>13</td>
                         <td>78</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>55</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>7</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>16</td>
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>45</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>11</td>
-                        <td>82</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>42</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-8",
-                 "-9",
+                 "-8",
                  "-10"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-4",
-                 "-5",
+                 "-4",
                  "-6"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "11"
+                 "13",
+                 "16",
+                 "6"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "78",
                  "79",
-                 "82"
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "45",
-                 "42"
+                 "57",
+                 "51",
+                 "49"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 10:05:06 2018</p>
+         Last Run: Thu Dec  6 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,35 +679,35 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>2</td>
-                        <td>65</td>
+                        <td>3</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>30</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>3</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "2",
-                 "2"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "65",
-                 "66"
+                 "67",
+                 "67",
+                 "67"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "30",
-                 "25"
+                 "41",
+                 "34",
+                 "28"
                ]
              }
            ]
