--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 05:05:03 2018</p>
+         Last Run: Fri Dec  7 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -31,10 +31,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
+                        <td>-7</td>
+                        <td>-11</td>
                         <td>0</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -45,8 +45,8 @@
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>0</td>
-                        <td>56</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -58,10 +58,10 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
+                 "-11",
                  "-9",
                  "-6"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-8",
+                 "-7",
                  "-5",
                  "-3"
                ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
+                 "1",
                  "1"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
                  "56",
-                 "54"
+                 "55",
+                 "53"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 05:05:03 2018</p>
+         Last Run: Fri Dec  7 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -261,18 +261,18 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>37</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>56</td>
                         <td>0</td>
                         <td>10</td>
@@ -377,7 +377,7 @@
                "data":[
                  "1",
                  "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "63",
-                 "60",
+                 "61",
                  "56"
                ]
              },
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "39",
-                 "37",
+                 "40",
                  "40"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 05:05:03 2018</p>
+         Last Run: Fri Dec  7 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>24</td>
-                        <td>81</td>
+                        <td>8</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>45</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>23</td>
-                        <td>79</td>
+                        <td>7</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>19</td>
-                        <td>81</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>46</td>
+                        <td>WSW</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "23",
-                 "19"
+                 "8",
+                 "7",
+                 "6"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "79",
-                 "81"
+                 "83",
+                 "82",
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "46",
-                 "46"
+                 "38",
+                 "40",
+                 "41"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 05:05:03 2018</p>
+         Last Run: Fri Dec  7 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-8</td>
+                        <td>Clear</td>
+                        <td>-4</td>
+                        <td>-9</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>WSW</td>
-                        <td>30</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>63</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>1</td>
-                        <td>62</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-9",
                  "-9",
                  "-9"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-4",
                  "-4"
                ]
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "1",
-                 "1"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "67",
                  "63",
-                 "62"
+                 "63"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "27",
-                 "24"
+                 "20",
+                 "19",
+                 "18"
                ]
              }
            ]
